vault/vault-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vault.example.com"  # Update with your domain or hostname

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-vs
  namespace: vault
spec:
  hosts:
  - "vault.example.com"  # Update with your domain or hostname
  gateways:
  - vault-gateway
  http:
  - route:
    - destination:
        host: vault
        port:
          number: 8200
